Allow the security manager to be used when running scripted tests for sbt 0.13